// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link unit tests Renders with color dark 1`] = `
<DocumentFragment>
  .emotion-0 {
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  --tw-text-opacity: 1;
  color: rgba(63, 63, 70, var(--tw-text-opacity));
}

.emotion-0:hover {
  --tw-text-opacity: 1;
  color: rgba(161, 161, 170, var(--tw-text-opacity));
}

<a
    class="emotion-0"
    href="#"
  >
    My Link
  </a>
</DocumentFragment>
`;

exports[`Link unit tests Renders with color secondary 1`] = `
<DocumentFragment>
  .emotion-0 {
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  --tw-text-opacity: 1;
  color: rgba(234, 179, 8, var(--tw-text-opacity));
}

.emotion-0:hover {
  --tw-text-opacity: 1;
  color: rgba(202, 138, 4, var(--tw-text-opacity));
}

<a
    class="emotion-0"
    href="#"
  >
    My Link
  </a>
</DocumentFragment>
`;
